[project]
name = "gh-backup"
version = "0.2.0"
description = "Backup a GitHub organization or user: repos, issues, and pull requests"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
authors = [{ name = "Eoin O'Brien", email = "eoin@eoin.ai" }]
keywords = ["github", "backup", "git", "cli", "archive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["typer>=0.15", "rich>=13", "tenacity>=9", "zstandard>=0.23"]

[project.urls]
Homepage = "https://github.com/eoin-obrien/gh-backup"
Repository = "https://github.com/eoin-obrien/gh-backup"
Changelog = "https://github.com/eoin-obrien/gh-backup/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/eoin-obrien/gh-backup/issues"

[project.scripts]
gh-backup = "gh_backup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.13.7",
    "pre-commit>=4.5.1",
    "pytest>=8",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q -ra --cov=gh_backup --cov-report=term-missing"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
